@@ -121,21 +121,62 @@ Uc_var_symbol *Uc_class::add_symbol
 Uc_var_symbol *Uc_class::add_alias
 	(
 	char *nm,
-	Uc_var_symbol *var,
+	Uc_var_symbol *var
+	)
+	{
+	if (scope.is_dup(nm))
+		return 0;
+					// Create & assign slot.
+	Uc_alias_symbol *alias = new Uc_alias_symbol(nm, var);
+	scope.add(alias);
+	return alias;
+	}
+
+/*
+ *	Add alias to class variable.
+ *
+ *	Output:	New sym, or 0 if already declared.
+ */
+
+Uc_var_symbol *Uc_class::add_alias
+	(
+	char *nm,
+	Uc_var_symbol *v,
 	Uc_struct_symbol *struc
 	)
 	{
 	if (scope.is_dup(nm))
 		return 0;
 					// Create & assign slot.
-	Uc_alias_symbol *alias;
-	if (struc)
-		alias = new Uc_struct_alias_symbol(nm, var, struc);
-	else
-		alias = new Uc_alias_symbol(nm, var);
+	Uc_var_symbol *var = dynamic_cast<Uc_var_symbol *>(v->get_sym());
+	Uc_alias_symbol *alias = new Uc_struct_alias_symbol(nm, var, struc);
 	scope.add(alias);
 	return alias;
 	}
+
+#if 0	// ++++ Not yet.
+/*
+ *	Add alias to class variable.
+ *
+ *	Output:	New sym, or 0 if already declared.
+ */
+
+Uc_var_symbol *Uc_class::add_alias
+	(
+	char *nm,
+	Uc_var_symbol *v,
+	Uc_class *c
+	)
+	{
+	if (scope.is_dup(nm))
+		return 0;
+					// Create & assign slot.
+	Uc_var_symbol *var = dynamic_cast<Uc_var_symbol *>(v->get_sym());
+	Uc_alias_symbol *alias = new Uc_class_alias_symbol(nm, var, c);
+	scope.add(alias);
+	return alias;
+	}
+#endif
 
 /*
  *	Add method.
